--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,9 @@
         <revision>1.0.0</revision>
 
         <spring-boot.version>2.3.2.RELEASE</spring-boot.version>
+        <sentinel.version>1.8.7</sentinel.version>
+        <apollo.version>2.3.0</apollo.version>
+        <spring-cloud.version>4.1.3</spring-cloud.version>
 
         <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
@@ -51,6 +54,23 @@
                 <scope>compile</scope>
             </dependency>
 
+            <dependency>
+                <groupId>com.alibaba.csp</groupId>
+                <artifactId>sentinel-core</artifactId>
+                <version>${sentinel.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.ctrip.framework.apollo</groupId>
+                <artifactId>apollo-client</artifactId>
+                <version>${apollo.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-context</artifactId>
+                <version>${spring-cloud.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
