--- a/mq-degrade-send-spring-boot-starter/pom.xml
+++ b/mq-degrade-send-spring-boot-starter/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>spring-cloud-context</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
