--- a/mq-degrade-send-spring-boot-starter/pom.xml
+++ b/mq-degrade-send-spring-boot-starter/pom.xml
@@ -14,6 +14,7 @@
 
     <name>mq-degrade-send-spring-boot-starter</name>
     <description>mq-degrade-send-spring-boot-starter</description>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
