--- a/mq-degrade-example/mq-degrade-example-send/src/main/resources/application.properties
+++ b/mq-degrade-example/mq-degrade-example-send/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=9099
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=123456
-spring.datasource.url=jdbc:mysql://localhost:3306/openquartz?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/openquartz?useUnicode=true&characterEncoding=utf8&useSSL=false&usePublicKeyRetrieval=false
 #### MQ-Degrade
 mq.degrade.common.enable=true
 mq.degrade.common.enable-auto-degrade=false
-## ?? test ????????
+#### `test` resource force degrade
 mq.degrade.common.resource-degrade.test.enable-force-degrade=true
